# MeshViewer

./: .gitlab-ci.yml  CMakeLists.txt  README.md  annotated.html  classData-members.html  classData.html  classMesh-members.html  classMesh.html  classOpenGLWidget.html  classOpenGLWidget__coll__graph.map  classOpenGLWidget__coll__graph.md5  classes.html  conceptHasTriangleOps.html  conceptHasVertices.html  conceptTriangleLike.html  conceptarithmetic.html  concepts.html  data_8h_source.html  dir_d44c64559bbebec7f509842c48db8b23.html  functions.html  functions_func.html  hierarchy.html  inherit_graph_1.map  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  inherit_graph_3.md5  inherit_graph_5.map  inherit_graph_5.md5  inherit_graph_6.map  inherit_graph_6.md5  inherit_graph_7.map  inherit_graph_7.md5  inherits.html  mainwindow_8h_source.html  mesh_8h_source.html  openGLWidget_8h_source.html  structVertex-members.html  structVertex.html  triangle_8h_source.html  (+1 more)
include/: data.h  mainwindow.h  mesh.h  openGLWidget.h  triangle.h  vertex.h
search/: all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_2.js  classes_4.js  concepts_0.js  concepts_1.js  concepts_2.js  functions_0.js  searchdata.js
src/: camera.cpp  data.cpp  mainwindow.cpp  mainwindow.ui  mesh.cpp  openGLWidget.cpp  triangle.cpp  vertex.cpp
tests/: test_mesh.cpp
